# blind-jump

./: .gitignore  ATTRIBUTION.md  CMakeLists.txt  COPYING  README  README.md
Blind Jump/: .gitignore  Blind Jump-Info.plist  Caption.cpp  Caption.hpp  FireExplosion.cpp  FireExplosion.hpp  GradientCircle.cpp  GradientCircle.hpp  Hearts.cpp  Hearts.hpp  IntroDoor.cpp  IntroDoor.hpp  Pillar.cpp  Pillar.hpp  Powerup.cpp  Powerup.hpp  PowerupParticles.cpp  PowerupParticles.hpp  RenderType.hpp  ResourcePath.hpp  ResourcePath.mm  Strings.h  Teleporter.cpp  Teleporter.hpp  aStar.cpp  aStar.hpp  alphabetSheet.piko  angleFunction.hpp  antenna.cpp  antenna.hpp  backgroundHandler.cpp  backgroundHandler.hpp  blue.frag  blur.frag  bossLevels.h  building.cpp  building.hpp  bulletType1.cpp  bulletType1.hpp  color.frag  (+113 more)
Blind Jump.xcodeproj/: project.pbxproj
Resources/: bkg_orbit2.pxm  control
img/: edgeBlur.frag
res/: color.frag  config.json  manifest.json  resources.json
src/: #dasherShot.cpp#  #makefile#  .#makefile  .clang-format  BlindJump  DasherCorpse.hpp  DetailGroup.hpp  Drawable.hpp  Effect.cpp  Effect.hpp  Engine.cpp  Engine.hpp  Entity.hpp  FireExplosion.cpp  FireExplosion.hpp  Game.cpp  Game.hpp  Game_updateGraphics.cpp  Game_updateLogic.cpp  GfxContext.hpp  GradientCircle.cpp  GradientCircle.hpp  HelperGroup.hpp  IntroDoor.cpp  IntroDoor.hpp  Item.cpp  Item.hpp  Laika.hpp  LightSource.hpp  LuaProvider.cpp  LuaProvider.hpp  Makefile  Powerup.cpp  Powerup.hpp  RenderType.hpp  ResourcePath.cpp  ResourcePath.cxx  ResourcePath.hpp  RubyProvider.cpp  RubyProvider.hpp  (+161 more)
(+56 files in other folders)
